# speed-dating-analysis

./: .env.example  .gitignore  01_data_engineering.py  02_eda_statistics.py  03_modeling.py  04_network_analysis.py  README.md  config.py  logging_config.py  pyproject.toml  requirements.txt  run_pipeline.py  schemas.py
tests/: test_data_engineering.py
