[project]
name = "speed-dating-analysis"
version = "1.0.0"
description = "End-to-end data science pipeline on the Columbia Speed Dating dataset"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ana" }]
license = { text = "MIT" }
keywords = ["data-science", "xgboost", "shap", "network-analysis", "behavioral-economics"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ── Linter / Formatter ──────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
